Solution réalisable d'Instance 7 trouvée

--- a/DI4_OptiEmploiDuTemps.vcxproj
+++ b/DI4_OptiEmploiDuTemps.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="algorithme_heuristique.txt" />
+    <Text Include="Data\Format Etudiant Public\data.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Instance.cpp" />
