--- a/DI4_OptiEmploiDuTemps.vcxproj
+++ b/DI4_OptiEmploiDuTemps.vcxproj
@@ -150,10 +150,14 @@
   <ItemGroup>
     <ClCompile Include="Instance.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Heuristique.cpp" />
+    <ClCompile Include="MetaHeuristique.cpp" />
     <ClCompile Include="Solution.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instance.hpp" />
+    <ClInclude Include="Heuristique.hpp" />
+    <ClInclude Include="MetaHeuristique.h" />
     <ClInclude Include="Solution.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
