Refonte complète des Opérateurs. Beaucoup plus de voisins

--- a/DI4_OptiEmploiDuTemps.vcxproj
+++ b/DI4_OptiEmploiDuTemps.vcxproj
@@ -152,12 +152,14 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Heuristique.cpp" />
     <ClCompile Include="MetaHeuristique.cpp" />
+    <ClCompile Include="Outils.cpp" />
     <ClCompile Include="Solution.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instance.hpp" />
     <ClInclude Include="Heuristique.hpp" />
     <ClInclude Include="MetaHeuristique.hpp" />
+    <ClInclude Include="Outils.hpp" />
     <ClInclude Include="Solution.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
