--- a/DI4_OptiEmploiDuTemps.vcxproj.filters
+++ b/DI4_OptiEmploiDuTemps.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="MetaHeuristique.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Outils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Instance.hpp">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MetaHeuristique.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Outils.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
