--- a/DI4_OptiEmploiDuTemps.vcxproj
+++ b/DI4_OptiEmploiDuTemps.vcxproj
@@ -145,7 +145,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="algorithme_heuristique.txt" />
+    <Text Include="Data\Format Etudiant Public\ALLdata.txt" />
     <Text Include="Data\Format Etudiant Public\data.txt" />
+    <Text Include="Data\Format Etudiant Public\sortie.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Instance.cpp" />
